# pandas-polars-comparison-presentation

./: .gitattributes  pyproject.toml
comparisons/: comparisons.ipynb
data/: nepal_climate.csv  titanic.parquet
